# scp-tag-translation

./: .gitignore  05command_tech-hub-tag-list.wikidot  CLAUDE.md  Makefile  README.md  TECHNICAL_REVIEW.md  TRANSLATOR_DESIGN.md  __init__.py  analyze_dict.py  cli.py  cli_improved.py  css_fix.patch  index.html  mapping_audit.csv  pyproject.toml  scp-jp_fragment_tag-list-basic.wikidot  scp-jp_fragment_tag-list-event.wikidot  scp-jp_fragment_tag-list-faq.wikidot  scp-jp_fragment_tag-list-series.wikidot  scp-jp_fragment_tag-list-universe.wikidot  scp-jp_fragment_tag-list-unused.wikidot  scp-jp_tag-list.wikidot  test_comprehensive_js.html  test_implementation_consistency.py  test_js_algorithm.html  test_js_segmentation.html  test_segmentation_detailed.py  test_translation.py
dictionaries/: deprecated_en_to_jp.json  en_to_jp.json
scripts/: build_dict.py  parse_sources.py
scripts/parsers/: en_parser.py  jp_parser.py
sources/en/: tag-list.txt
sources/jp/: fragment-basic.txt  fragment-event.txt  fragment-series.txt  fragment-universe.txt  fragment-unused.txt
src/: __init__.py  auditor.py  config.py  generator.py  logger.py  translator.py  validator.py
src/parsers/: __init__.py  en_parser.py  jp_parser.py
tests/: conftest.py  test_build_dict.py  test_en_parser.py  test_generator.py  test_jp_parser.py  test_parsers.py  test_translation_integrity.py  test_validator.py
